--- a/src/components/common/CommonMeta.astro
+++ b/src/components/common/CommonMeta.astro
@@ -5,4 +5,13 @@ import { getAsset } from '~/utils/permalinks';
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<!-- Preload critical font for better LCP/FCP -->
+<link
+  rel="preload"
+  href="/_astro/inter-latin-wght-normal.Dx4kXJAl.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+
 <link rel="sitemap" href={getAsset('/sitemap-index.xml')} />
