--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,7 +20,15 @@ const metadata = {
   <Hero
     tagline="Contact"
     title="Let's Connect!"
-    image={{ src: '~/assets/images/home/hero-image.webp', alt: 'Contact Rebirth Web Design' }}
+    image={{ src: '~/assets/images/contact/contact-image.webp', alt: 'Contact Rebirth Web Design' }}
+    imageContainerClass="max-w-2xl"
+    imageWidth={2096}
+    imageHeight={734}
+    titleBottomSpacing="pb-0"
+    imageMarginTop="-mt-14"
+    titleZIndex="relative z-10"
+    imageZIndex="relative z-0"
+    containerPadding="pt-12 md:pt-20"
   />
 
   <ContactUs
