--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -46,9 +46,9 @@ const metadata = {
 
     <!-- Newsletter Signup -->
     <div class="text-center my-12 py-8">
-      <h2 class="text-2xl md:text-3xl font-bold mb-4 dark:text-white">
+      <p class="text-base text-secondary dark:text-blue-200 font-bold tracking-wide uppercase mb-4">
         Get informed of new articles in our newsletter.
-      </h2>
+      </p>
       <a
         href="/contact?newsletter=true"
         class="inline-flex items-center justify-center rounded-full border-primary border-2 bg-primary font-semibold text-white text-center text-base leading-snug transition py-3.5 px-8 ease-in duration-200 hover:bg-secondary hover:border-secondary focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 cursor-pointer"
