--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -11,4 +11,5 @@ import logo from '~/assets/images/logo/logo.webp';
   class="max-w-[180px] w-auto h-auto self-center"
   loading="eager"
   decoding="async"
+  fetchpriority="high"
 />
