--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,6 +166,10 @@ const metadata = {
       src: '~/assets/images/home/feat2.webp',
       alt: 'Design blueprint',
       class: 'mx-auto w-full',
+      width: 552,
+      height: 552,
+      widths: [552],
+      sizes: '(max-width: 768px) 100vw, 552px',
     }}
   >
     <Fragment slot="bg">
