--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -83,7 +83,7 @@ const {
         {content && <Fragment set:html={content} />}
       </div>
       <div
-        class={`intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade ${imageMarginTop} ${imageZIndex}`}
+        class={`${imageMarginTop} ${imageZIndex}`}
       >
         <div class={`relative m-auto ${imageContainerClass}`}>
           {/* Mobile fallback image (if video exists) */}
@@ -97,6 +97,7 @@ const {
                   widths={[400, 768]}
                   sizes="(max-width: 767px) 400px, 768px"
                   loading="eager"
+                  fetchpriority="high"
                   width={imageWidth}
                   height={imageHeight}
                   {...image}
@@ -146,6 +147,7 @@ const {
                   widths={[400, 768, 1024, 2040]}
                   sizes="(max-width: 767px) 400px, (max-width: 1023px) 768px, (max-width: 2039px) 1024px, 2040px"
                   loading="eager"
+                  fetchpriority="high"
                   width={imageWidth}
                   height={imageHeight}
                   {...image}
