--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,10 +1,9 @@
 ---
-import { Image } from 'astro:assets';
 import logo from '~/assets/images/logo/logo.webp';
 ---
 
-<Image
-  src={logo}
+<img
+  src={logo.src}
   width={360}
   height={114}
   alt="ReBirth Web Design Logo"
